# PythaFlow

./: .env  .env.example  .gitignore  bahamas_restaurants.csv  restaurant_aisolution.md
concierge/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SPRINT_LOG.md  alembic.ini  docker-compose.yml  pyproject.toml
concierge/alembic/: env.py
concierge/alembic/versions/: 78bc7232c288_init_schema.py
concierge/app/: __init__.py  config.py  db.py  deps.py  logging.py  main.py
concierge/app/channels/: __init__.py  base.py  email.py  webchat.py
concierge/app/knowledge/: __init__.py  chunk.py  ingest.py  retrieve.py
concierge/app/llm/: __init__.py  base.py  embeddings.py  factory.py  service.py
concierge/app/llm/providers/: openai_compatible.py
concierge/app/models/: __init__.py  action.py  base.py  channel.py  conversation.py  enums.py  guest.py  knowledge.py  reservation.py  tenant.py
concierge/app/orchestrator/: __init__.py  base.py  echo.py  engine.py  guardrails.py  prompt.py  state.py
concierge/app/routers/: email.py  health.py  knowledge.py  webchat.py
concierge/app/schemas/: message.py
concierge/app/services/: locks.py  redis.py
concierge/app/tools/: __init__.py  base.py  registry.py
concierge/data/: demo_bistro.md
concierge/docs/: canonical-message.md  day01-walkthrough.md  erd.md
concierge/init/: 01_extensions.sql
concierge/scripts/: check_llm.py  ingest_kb.py  seed.py
concierge/tests/: conftest.py  test_email_adapter.py  test_guardrails.py  test_knowledge.py  test_models.py  test_orchestrator_llm.py  test_webchat_echo.py
(+85 files in other folders)
