[project]
name = "pythaflow-concierge"
version = "0.1.0"
description = "PythaFlow — the AI concierge for hospitality (Phase 0, text-first)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "openai>=1.40",
    "httpx>=0.27",
    "alembic>=1.13",
    "pgvector>=0.3",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "pytest>=8", "pytest-asyncio>=0.23", "anyio>=4"]

# Treat this as an application, not a distributable package — uv installs the
# dependencies into .venv but never tries to build `app/` itself.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
# Alembic migrations are generated code — don't lint them.
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
